--- a/presentation/css/custom.css
+++ b/presentation/css/custom.css
@@ -73,3 +73,9 @@ img[alt^=fullscreen-] {width: 100%; }
     box-shadow: none;
     width: 644px;
 }
+
+/* Remove border for some images --------------------- */
+.reveal section img[alt^=noborderx-] {
+    border: none;
+    box-shadow: none;
+}
